--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.0.3",
-        "react-scroll": "^1.8.7"
+        "react-scroll": "^1.8.7",
+        "save-svg-as-png": "^1.4.17"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.8",
