--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,7 +13,17 @@
         "params": {
             "title": "title",
             "text": "text",
-            "files": "files"
+            "files": [
+                {
+                    "name": "image",
+                    "accept": [
+                        "image/jpeg",
+                        "image/png",
+                        "image/webp",
+                        "image/gif"
+                    ]
+                }
+            ]
         }
     },
     "icons": [
