--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "graphql": "^16.6.0",
         "next": "12.1.5",
         "next-pwa": "^5.6.0",
+        "puppeteer": "^24.15.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.0.3",
