--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
         "@auth0/nextjs-auth0": "^1.9.1",
         "@uidotdev/usehooks": "^2.4.1",
         "auth0": "^2.42.0",
+        "chrome-aws-lambda": "^10.1.0",
         "firebase": "^9.12.1",
         "fuse.js": "^6.6.2",
         "graphql": "^16.6.0",
         "next": "12.1.5",
         "next-pwa": "^5.6.0",
-        "puppeteer": "^24.15.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.0.3",
@@ -30,6 +30,7 @@
         "eslint": "8.22.0",
         "eslint-config-next": "12.2.5",
         "postcss": "^8.4.16",
+        "puppeteer": "^24.15.0",
         "tailwindcss": "^3.1.8"
     }
 }
