--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
         "@sparticuz/chromium": "^138.0.2",
         "@uidotdev/usehooks": "^2.4.1",
         "auth0": "^2.42.0",
-        "chrome-aws-lambda": "^10.1.0",
         "firebase": "^9.12.1",
         "fuse.js": "^6.6.2",
         "graphql": "^16.6.0",
         "next": "12.1.5",
         "next-pwa": "^5.6.0",
-        "puppeteer-core": "^24.15.0",
+        "puppeteer-core": "22.4.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-firebase-hooks": "^5.0.3",
