Fixing error on building

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
         "api/chart.js": {
             "memory": 1024,
             "maxDuration": 15,
-            "includeFiles": ["node_modules/@sparticuz/chromium/bin/**"]
+            "includeFiles": "node_modules/@sparticuz/chromium/bin/**"
         }
     }
 }
