--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "auth0": "^2.42.0",
         "firebase": "^9.12.1",
         "fuse.js": "^6.6.2",
+        "googleapis": "^156.0.0",
         "graphql": "^16.6.0",
         "next": "12.1.5",
         "next-pwa": "^5.6.0",
